                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 20-05-2005 fixed: formatting of the right column in my music -> files
 - 20-05-2005 changed: Commands are now case invariant
 - 20-05-2005 added: HttpApi GetSystemInfoByName and (changed) GetSystemInfo commands
 - 20-05-2005 updated: German language file
 - 20-05-2005 updated: Spanish language file (Thnx to unknown)
 - 20-05-2005 updated: Korean language file (Thnx to unknown)
 - 20-05-2005 updated: French language file (Thnx to modhack)
 - 20-05-2005 added: Replay gain support for ogg and flac files
 - 19-05-2005 fixed: if you change the track format, cached filelists from my music -> library are cleared
 - 19-05-2005 added: the right column in my music is now controlled via a format string.  default is duration (%D)
 - 19-05-2005 fixed: info tag parser now correctly displays localized text in between items, thanks to desertbear
 - 19-05-2005 fixed: Seek(offset, SEEK_END) behaviour with files over Relax, XBMSP, iso9660, CDDA, SndTrk etc. was incorrect (caused tag issues among others).
 - 18-05-2005 added: info tag parser now hides text in between missing items, thanks to desertbear
 - 18-05-2005 fixed: FLAC buffer overrun (crash) on seek.
 - 18-05-2005 fixed/improved: Visualisation info fade in/fade out.
 - 18-05-2005 fixed: crash when swithing between fullscreen and small window when mplayer osd was visible
 - 18-05-2005 fixed: ttf subtitles sometimes didn't enable untill selected from sub selection, even thou mplayer subtitles where visible on screen
 - 17-05-2005 fixed: album info, cover art gets deleted when a lookup fails
 - 17-05-2005 changed: getting album info can be canceled now