@@ -23,6 +23,7 @@
 #include "TransferSocket.h"
 #include "ControlSocket.h"
 #include "options.h"
+#include "../../../util.h"
 #include "ServerThread.h"
 #ifndef NOLAYERS
 #include "AsyncGssSocketLayer.h"
@@ -477,6 +478,15 @@ void CTransferSocket::OnReceive(int nErrorCode)
 		if (m_hFile == INVALID_HANDLE_VALUE)
 		{
 			ASSERT(m_Filename!="");
+      
+      // this to handle fat-x limitations
+      CUtil::ShortenFileName(m_Filename); // change! addme to new ports
+      CStdString strFilename = CUtil::GetFileName(m_Filename);
+      CStdString strPath;
+      CUtil::GetDirectory(m_Filename,strPath);
+      CUtil::RemoveIllegalChars(strFilename);
+      m_Filename = strPath+"\\"+strFilename;
+
 			m_hFile = CreateFile(m_Filename, GENERIC_WRITE, FILE_SHARE_READ, 0, OPEN_ALWAYS, FILE_ATTRIBUTE_NORMAL | FILE_FLAG_SEQUENTIAL_SCAN, 0);
 			if (m_hFile == INVALID_HANDLE_VALUE)
 			{
